# wfa2lib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: AVX2_MIGRATION.md  PLAN.md  PROJECT.md
bench/: generate_data.sh  run.sh
src/: aligner.rs  arena.rs  backtrace.rs  bialign.rs  bt_buffer.rs  cigar.rs  components.rs  extend.rs  heuristic.rs  lib.rs  offset.rs  pcigar.rs  penalties.rs  sequences.rs  slab.rs  termination.rs  wavefront.rs  wavefront_set.rs
src/compute/: affine.rs  affine2p.rs  edit.rs  linear.rs  mod.rs
tests/: test_vs_reference.rs  wfa_utest.sh
