[package]
name = "wfa2lib-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "align_benchmark"
path = "src/bin/align_benchmark.rs"
